[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "pydantic>=2.1.4",
    "schemathesis==4.4.4",
    "pydantic[email,timezone]",
    "asyncpg>=0.30.0",
    "locust>=2.42.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:jsonschema.exceptions.RefResolutionError is deprecated:DeprecationWarning"
]
